get work by id
