# backend/docs/swagger.json
@@ -121,7 +121,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.ListWokrsResp"
+                            "$ref": "#/definitions/model.ListWorksResp"
                         }
                     }
                 }
@@ -162,20 +162,39 @@
                     }
                 }
             }
+        },
+        "/works/:id": {
+            "get": {
+                "description": "get a work by work_id",
+                "tags": [
+                    "works"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "work id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.GetWorkResp"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "model.ListWokrsResp": {
+        "model.GetWorkResp": {
             "type": "object",
             "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "works": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Work"
-                    }
+                "work": {
+                    "$ref": "#/definitions/model.Work"
                 }
             }
         },
@@ -190,6 +209,20 @@
                 },
                 "user_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.ListWorksResp": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "works": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Work"
+                    }
                 }
             }
         },
